--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 [dependencies]
 winit = "0.28"
 vulkano = "0.34.0"
+vulkano-win = "0.34"
+vulkano-shaders = "0.34"
+vulkano-util = "0.34"
